--- a/package.json
+++ b/package.json
@@ -1,19 +1,49 @@
 {
-  "dependencies": {
-    "@types/node": "^7.0.0",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.26.0",
-    "node-sass": "^4.3.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "ts-loader": "^1.3.3",
-    "typescript": "^2.1.5",
-    "webpack": "^1.14.0"
-  },
   "name": "tutWebpack",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "node config/dev-server.js",
+    "build:server": "node_modules/.bin/http-server dist/",
+    "build": "node config/build.js",
+    "remap": "./node_modules/.bin/remap-istanbul --input ./coverage/coverage-final.json --output ./coverage/remapped --type html",
+    "test": "node_modules/.bin/karma start; npm run remap",
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "doc": "node_modules/.bin/typedoc ./app/ --exclude app/**/*.spec.ts --ignoreCompilerErrors --excludeExternals --experimentalDecorators --target ES5 --out ./doc",
+    "mock_data": "node mock/generate_members.js"
+  },
+  "dependencies": {
+    "@types/node": "^7.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "compression-webpack-plugin": "^0.3.2",
+    "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.26.1",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "friendly-errors-webpack-plugin": "^1.1.3",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
+    "node-sass": "^4.3.0",
+    "opn": "^4.0.2",
+    "ora": "^1.1.0",
+    "postcss-loader": "^1.2.2",
+    "sass-loader": "^4.1.1",
+    "shelljs": "^0.7.6",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^2.0.0",
+    "typescript": "^2.1.5",
+    "url-loader": "^0.5.7",
+    "webpack": "1.13.2",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1",
+    "webpack-merge": "^2.6.1"
+  }
 }
