--- a/package.json
+++ b/package.json
@@ -14,13 +14,29 @@
     "mock_data": "node mock/generate_members.js"
   },
   "dependencies": {
-    "@types/node": "^7.0.0"
+    "@types/node": "^7.0.0",
+    "@types/react": "^15.0.6",
+    "@types/react-dom": "^0.14.22",
+    "@types/react-redux": "^4.4.36",
+    "@types/react-router": "^3.0.0",
+    "@types/react-router-redux": "^4.0.39",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "compression-webpack-plugin": "^0.3.2",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
