--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@types/react-router-redux": "^4.0.39",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "babel-polyfill": "^6.22.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^1.2.4",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
