--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "babel-polyfill": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
