--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
