--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "noImplicitAny": false,
         "removeComments": true,
         "preserveConstEnums": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "baseUrl": "./src"
     },
     "include": [
         "src/**/*"
