--- a/package.json
+++ b/package.json
@@ -13,6 +13,21 @@
     "doc": "node_modules/.bin/typedoc ./app/ --exclude app/**/*.spec.ts --ignoreCompilerErrors --excludeExternals --experimentalDecorators --target ES5 --out ./doc",
     "mock_data": "node mock/generate_members.js"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.(ts|tsx)$": "typescript-babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "testRegex": "/src/.*\\.spec\\.(ts|tsx)$",
+    "collectCoverage": true,
+    "unmockedModulePathPatterns": [
+      "react"
+    ]
+  },
   "dependencies": {
     "@types/node": "^7.0.0",
     "@types/react": "^15.0.6",
@@ -35,6 +50,8 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^18.1.1",
+    "@types/react-addons-test-utils": "^0.14.17",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -52,15 +69,18 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "jest": "^18.1.0",
     "node-sass": "^4.3.0",
     "opn": "^4.0.2",
     "ora": "^1.1.0",
     "postcss-loader": "^1.2.2",
+    "react-addons-test-utils": "^15.4.2",
     "sass-loader": "^4.1.1",
     "shelljs": "^0.7.6",
     "style-loader": "^0.13.1",
     "ts-loader": "^2.0.0",
     "typescript": "^2.1.5",
+    "typescript-babel-jest": "^1.0.1",
     "url-loader": "^0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "^1.10.0",
